se realizo la integracion de angular material a un nuevo componente

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,3 +11,7 @@
     <img *ngIf="respuesta.image" [src]="respuesta.image" alt="">
   </ng-container>
 </div>
+
+<mat-slider min="1" max="100" step="1" value="50"></mat-slider>
+
+<app-cards></app-cards>
